scoring/static/scoring/scss/scoring-table.scss
$table-desktop-breakpoint: map-get($grid-breakpoints, lg);
$border-table: 1px solid transparentize($color: $black, $amount: 1);

// Table scorecard Desktop
.scorecard-table-wrapper {
    width: 100%;
    max-height: 97vh;
    overflow: auto;

    .highlight {
        th, td {
            background: lighten($color-scorecard-yellow, 30%) !important;
        }
    }
}

.scorecard-table {
    $first-cell-width: 250px;
    $default-cell-width: 165px;
    $small-cell-width: 85px;
    $xsmall-cell-width: 65px;

    th, td {
        vertical-align: middle;
        z-index: 0;
        min-width: $default-cell-width;
        max-width: $default-cell-width;
        font-size: 0.85rem;
        font-weight: 400;
        padding: 1rem 0.25rem 1rem 0.75rem;

        &.previous-year-score,
        &.previous-year-score-difference {
            min-width: $small-cell-width;
            text-align: center;
            padding-left: 0;
            padding-right: 1rem;
        }
    }

    th {
        &:first-child {
            min-width: $first-cell-width !important;
        }
    }

    th.previous-year-score-difference,
    td[data-sort-section="overall_vs"] {
        position: sticky;
        z-index: 3;
        left: $first-cell-width +  $default-cell-width;
    }

    .second-row {
        :nth-child(3) {
            z-index: 5;
        }
    }

    &.js-previous-year-score-difference-table[has-difference="false"] {
        $default-cell-width: 200px;

        th,td {
            max-width: $default-cell-width;
            min-width: $default-cell-width;
        }

        .js-previous-year-difference-header {
            .section-title {
                justify-content: left;
            }
        }
    }

    &.js-previous-year-score-difference-table[has-difference="true"] {
        .js-previous-year-difference-header {
            .js-sort-table {
                display: none;
            }
        }
    }

    th {
        background-color: $white;
        vertical-align: middle;

        .section-title {
            display: flex;
            flex-direction: row-reverse;
            justify-content: center;
            align-items: center;
            gap: 0.5rem;
        }
    }

    @media only screen and (max-width: $table-desktop-breakpoint) {
        display: none;
    }

    $first-row-height: 40px;
    thead {
        th {
            max-height: $first-row-height;
            height: $first-row-height;
        }
    }

    thead th:first-child {
        left: 0;
    }

    tbody {

        th {
            position: relative;
            left: 0px;
        }

        tr {
            &:nth-child(odd) {
                background-color: $color-scorecard-grey-100;
                th,td {
                    background-color: $color-scorecard-grey-100;
                }
            }
    
            &:nth-child(even) {
                background-color: $white;
                th,td {
                    background-color: $white;
                }
            }
        }
    }

    .total-score {
        left: $first-cell-width;
    }

    .has-no-plan {
        padding-left: 32.5px; // match the `margin: auto` on .score-bar
    }
}

// Progress bar
$score-bar-border-radius: 25px;
$score-bar-vertical-padding: 8px;

.score-bar {
    background: $white;
    border: 1px solid $primary;
    border-radius: $score-bar-border-radius;
    width: 150px;
    padding: $score-bar-vertical-padding 0;
    position: relative;
    overflow: hidden;

    .progress-bar {
        width: 0;
        height: 100%;
        position: absolute;
        background-color: mix($primary, $white, 10%);
        top:0;
        z-index: 0;
    }

    span {
        display: block;
        text-align: center;
        line-height: 100%;
        margin: 0 auto;
        z-index: 1;
        position: relative;
        padding: 0.2rem;
        width: fit-content;
        border-radius: 4px;
    }

    span.average {
        position: absolute;
        right: 10px;
        top: 50%;
        transform: translateY(-50%);
        font-size: 0.75rem;
        font-weight: 300;
    }
}

.second-row .total-score {
    @media only screen and (max-width: $table-desktop-breakpoint) {
        background-color: $white;
    }
}

@each $name, $color in $theme-colors {
    .#{$name} {
        @include progress-bar-body($color);
    }
}

// Sort icon
.sort-icon {
    @include transition(background-image, color, background-color 0.3s ease-in-out);
    background-image: url("../img/chevron-down-purple.svg");
    background-size: 15px;
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 50%;
    height: 26px;
    width: 26px;
    @each $name, $colour in $theme-colors {
        &.is--#{$name} {
            border-color: $colour;
        }
    }
    position: relative;
    @each $name, $colour in $theme-colors {
        &.is--#{$name} {
            &::before {
                content: '';
                position: absolute;
                background-color: $colour;
                display: block;
                width: 100%;
                height: 100%;
                border-radius: 50%;
                top: 0;
                left: 0;
                mix-blend-mode: hue;
            }
        }
    }

    &:hover {
        background-image: url("../img/chevron-down-white.svg");
        @each $name, $colour in $theme-colors {
            &.is--#{$name} {
                background-color: $colour;
            }
        }
    }

    &:focus {
        background-color: $yellow;
        // It won't be overriden by .is-sorted-descending and is-sorted-ascending 
        background-image: url("../img/chevron-down-purple.svg") !important;
    }

    &.is-sorted-descending {
        background-color: $primary;
        background-image: url("../img/chevron-down-white.svg");
        @each $name, $colour in $theme-colors {
            &.is--#{$name} {
                background-color: $colour;
            }
        }
    }

    &.is-sorted-ascending {
        transform: rotate(180deg);
        background-color: $primary;
        background-image: url("../img/chevron-down-white.svg");

        @each $name, $colour in $theme-colors {
            &.is--#{$name} {
                background-color: $colour;
            }
        }
    }
}

// This version includes text
.sort-button {
    display: inline-flex;
    align-items: center;
    gap: 0.25rem;
    padding: 0.25rem;
    font-size: 0.75rem;
    border: 0;
    background: transparent;
    border-radius: $border-radius;
    @include transition(background-color, color 0.3s ease-in-out);

    @each $name, $colour in $theme-colors {
        &.is--#{$name} {
            color: $colour;
        }
    }

    &:hover {
        background-color: $primary-100;
        color: $primary;
        @each $name, $colour in $theme-colors {
            &.is--#{$name} {
                background-color: mix($colour,$white,25%);
                color: $colour;
            }
        }
    }

    &:focus {
        box-shadow: inset 0 0px 0px 2px  $color-scorecard-yellow, inset 0 0px 0 4px $black !important;
        outline: 0;
    }

    &.is-sorted-descending,
    &.is-sorted-ascending {
        background-color: $primary;
        color: $white;
        @each $name, $colour in $theme-colors {
            &.is--#{$name} {
                background-color: $colour;
                color: $white;
            }
        }
    }

    &.is-sorted-ascending {
        svg {
            transform: rotate(180deg);
        }
    }
}

.council-link {
    display: block;
    white-space: break-spaces;
    text-decoration: none;
    font-weight: normal;

    &:hover {
        text-decoration: underline;
    }
}

// Mobile table
$padding-left: 1rem;

.scorecard-table-mobile {
    width: auto;
    white-space: nowrap;
    margin: 0;
    border-collapse: separate;
    border-spacing: 0;

    @media only screen and (min-width: $table-desktop-breakpoint) {
        display: none;
    }

    thead {
        position: sticky;
        z-index: 2;
        // Size of the category select element
        top: 0;
        background: $white;

        .name-row {
            th, td {
                padding-top: 1rem;
            }
        }

        .score-row {
            th, td {
                padding-bottom: 1.25rem;
            }
        }
    }

    th,td {
        padding: 1rem 0.5rem;
    }

    .name-row {
        th,td {
            padding-top: 2rem;
            padding-bottom: 0.5rem;
            text-transform: uppercase;
            font-size: 0.8rem;
            text-align: center;
        }
    }

    .legend-row {
        th,td {
            padding-top: 0.25rem;
            padding-bottom: 0;
            text-align: center;
        }
    }

    .score-row {
        box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2);
        th,td {
            padding-top: 0.25rem;
            padding-bottom: 2rem;
            width: 10rem;
            text-align: center;
            width: 30%;
        }

        th.spacer-cell, td.spacer-cell {
            width: 20%;
        }
    }

    .message-row {
        box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2);
        background-color: #f2efef;
        text-align: center;
        + tr {
            td,th {
              padding-top: 3rem;
            }

            &.message-row {
                td, th {
                    padding-top: 0;
                }
            }
        }
    }

    .score-bar {
        width: 120px;
        padding: 4px 0;
        font-size: 0.8rem;
        margin:0 auto;

        span.average {
            display: none;
        }
    }
}

$js-classes: (
  'building',
  'transport',
  'planning',
  'governance',
  'biodiversity',
  'collaboration',
  'waste',
  'score-row-initial-hidden'
);

@each $class in $js-classes {
  .js-#{$class} {
    display: none;
  }
}

